--- a/Sandwich_Club/sandwich-club-starter-code-master/app/src/main/res/values/styles.xml
+++ b/Sandwich_Club/sandwich-club-starter-code-master/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Labels">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginRight">@dimen/activity_detail_margin</item>
+    </style>
 </resources>
