--- a/Popular_Movies_Stage01/app/src/main/res/layout/movie_list_item.xml
+++ b/Popular_Movies_Stage01/app/src/main/res/layout/movie_list_item.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv_item_movie"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</FrameLayout>
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="Trollololo"/>
+
+    <!--<ImageView-->
+        <!--android:id="@+id/iv_poster"-->
+        <!--android:layout_width="240dp"-->
+        <!--android:layout_height="240dp" />-->
+</LinearLayout>
