--- a/Popular_Movies_Stage01/app/src/main/res/layout/movie_list_item.xml
+++ b/Popular_Movies_Stage01/app/src/main/res/layout/movie_list_item.xml
@@ -60,6 +60,6 @@
 
     <ImageView
         android:id="@+id/iv_poster"
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="240dp" />
 </LinearLayout>
