--- a/Popular_Movies_Stage01/app/src/main/res/layout/movie_list_item.xml
+++ b/Popular_Movies_Stage01/app/src/main/res/layout/movie_list_item.xml
@@ -46,20 +46,13 @@
   ~  */
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="Trollololo"/>
 
     <ImageView
         android:id="@+id/iv_poster"
         android:layout_width="match_parent"
         android:layout_height="185dp" />
-</LinearLayout>
+</FrameLayout>
