feat: Implement options menu to toggle search parameters

--- a/Popular_Movies_Stage01/app/src/main/res/values/bools.xml
+++ b/Popular_Movies_Stage01/app/src/main/res/values/bools.xml
@@ -48,4 +48,5 @@
 
 <resources>
     <bool name="shouldAttachToParentImmediately">false</bool>
+    <bool name="hasMenuInflated">true</bool>
 </resources>
