--- a/Popular_Movies_Stage01/app/src/main/res/menu/settings.xml
+++ b/Popular_Movies_Stage01/app/src/main/res/menu/settings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ /*
   ~  * PROJECT LICENSE
@@ -45,17 +46,9 @@
   ~  */
   -->
 
-<resources>
-    <string name="app_name">Popular Movies, Stage 1</string>
-
-    <!-- Error messages -->
-    <string name="networkErr">Error with network or stream reading: </string>
-
-    <!-- Options menu option titles -->
-    <string name="mostPopular">Most Popular</string>
-    <string name="highestRated">Highest Rated</string>
-
-    <!-- Sort-by options -->
-    <string name="mostPopularDesc">popularity.desc</string>
-    <string name="higestRatedDesc">vote_average.desc</string>
-</resources>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/action_popular"
+        android:title="@string/mostPopular"/>
+    <item android:id="@+id/action_top_rated"
+        android:title="@string/highestRated"/>
+</menu>
