--- a/Popular_Movies_Stage01/app/src/main/res/layout/activity_detail.xml
+++ b/Popular_Movies_Stage01/app/src/main/res/layout/activity_detail.xml
@@ -50,6 +50,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/iv_detail_poster"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/tv_detail_title"
         android:layout_width="wrap_content"
