--- a/Popular_Movies_Stage01/app/src/main/res/menu/settings.xml
+++ b/Popular_Movies_Stage01/app/src/main/res/menu/settings.xml
@@ -48,7 +48,7 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/action_popular"
-        android:title="@string/mostPopular"/>
+        android:title="@string/most_popular"/>
     <item android:id="@+id/action_top_rated"
-        android:title="@string/highestRated"/>
+        android:title="@string/highest_rated"/>
 </menu>
