--- a/Popular_Movies_Stage02/app/src/main/res/layout/activity_main.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/activity_main.xml
@@ -45,15 +45,11 @@
   ~  */
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </FrameLayout>
+    android:id="@+id/poster_list_fragment"
+    android:name="com.example.full_dream.popularmoviesstage1.PosterListFragment">
 
-</LinearLayout>
+</fragment>
