--- a/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ /*
   ~  * PROJECT LICENSE
   ~  *
@@ -45,12 +44,8 @@
   ~  * SOFTWARE.
   ~  */
   -->
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_popular"
-        android:title="@string/most_popular"/>
-    <item android:id="@+id/action_top_rated"
-        android:title="@string/highest_rated"/>
-    <item android:id="@+id/action_favorites"
-        android:title="@string/favorites"/>
-</menu>
+</android.support.constraint.ConstraintLayout>
