--- a/Popular_Movies_Stage02/app/src/main/res/layout/movie_list_item.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/movie_list_item.xml
@@ -47,11 +47,13 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
+    <!-- adjustViewBounds - set to true if you want the ImageView to adjust its bounds
+         to preserve the aspect ratio of its drawable -->
     <ImageView
         android:id="@+id/iv_poster"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/posterHeight" />
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true" />
 </FrameLayout>
