--- a/Popular_Movies_Stage02/app/src/main/res/menu/settings.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/menu/settings.xml
@@ -47,10 +47,12 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_popular"
-        android:title="@string/most_popular"/>
-    <item android:id="@+id/action_top_rated"
-        android:title="@string/highest_rated"/>
-    <item android:id="@+id/action_favorites"
-        android:title="@string/favorites"/>
+    <group android:checkableBehavior="single">
+        <item android:id="@+id/action_popular"
+            android:title="@string/most_popular"/>
+        <item android:id="@+id/action_top_rated"
+            android:title="@string/highest_rated"/>
+        <item android:id="@+id/action_favorites"
+            android:title="@string/favorites"/>
+    </group>
 </menu>
