--- a/Popular_Movies_Stage02/app/src/main/res/drawable/border.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/drawable/border.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="UTF-8"?><!--
   ~ /*
   ~  * PROJECT LICENSE
   ~  *
@@ -44,17 +44,16 @@
   ~  * SOFTWARE.
   ~  */
   -->
-
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <!-- adjustViewBounds - set to true if you want the ImageView to adjust its bounds
-         to preserve the aspect ratio of its drawable -->
-    <ImageView
-        android:id="@+id/iv_poster"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:background="@drawable/border" />
-</FrameLayout>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Black solid background -->
+    <solid android:color="#000000" />
+    <!-- Gold border -->
+    <stroke
+        android:width="1dp"
+        android:color="#ffd700" />
+    <padding
+        android:bottom="1dp"
+        android:left="1dp"
+        android:right="1dp"
+        android:top="1dp" />
+</shape>
