--- a/Popular_Movies_Stage02/app/src/main/res/layout/activity_main.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/activity_main.xml
@@ -45,11 +45,20 @@
   ~  */
   -->
 
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
 
-    android:id="@+id/poster_list_fragment"
-    android:name="com.example.full_dream.popularmoviesstage1.fragment.PosterListFragment">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-</fragment>
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </FrameLayout>
+    </LinearLayout>
+
+</ScrollView>
