--- a/Popular_Movies_Stage02/app/src/main/res/layout/fragment_poster_list.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/fragment_poster_list.xml
@@ -47,6 +47,7 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rv_poster_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/black">
 
 </android.support.v7.widget.RecyclerView>
