--- a/Popular_Movies_Stage02/app/src/main/res/layout/movie_list_item.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/movie_list_item.xml
@@ -47,7 +47,8 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="4dp">
 
     <!-- adjustViewBounds - set to true if you want the ImageView to adjust its bounds
          to preserve the aspect ratio of its drawable -->
