--- a/Popular_Movies_Stage02/app/src/main/res/values/styles.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/values/styles.xml
@@ -64,4 +64,18 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <!-- Detail Block Style -->
+    <style name="DetailBlocks">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">#CC000000</item>
+    </style>
+
+    <!-- Detail TextView Style -->
+    <style name="DetailTextViews">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
 </resources>
