--- a/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
@@ -133,6 +133,21 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_release_date"/>
 
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/rv_trailer_list"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:layout_constraintTop_toBottomOf="@id/tv_summary"/>-->
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_review_list"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_summary"
+            android:layout_marginTop="8dp"/>
+
         <ImageView
             android:id="@+id/iv_backdrop"
             android:layout_width="match_parent"
