refactor: Implement TrailerAdapter, associated RecyclerView
..., and XML elements.
Retrieved and display YouTube thumbnails.
Added comments to Trailer POJO and to TrailerAdapter.
 Note: Created PosterAdapter, then ReviewAdapter, then TrailerAdapter
 ...and there is a interesting progression.
ToDo: Need to implement intent to YouTube to play video onClick.
ToDo: Data persistence elements, Favorite mechanic, and UI touch-ups.
ToDo: Screen orientation change persistence and bug-fixes.

--- a/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
@@ -133,11 +133,11 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_release_date"/>
 
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:id="@+id/rv_trailer_list"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--app:layout_constraintTop_toBottomOf="@id/tv_summary"/>-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_trailer_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tv_summary"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_review_list"
@@ -145,7 +145,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_summary"
+            app:layout_constraintTop_toBottomOf="@id/rv_trailer_list"
             android:layout_marginTop="8dp"/>
 
         <ImageView
