--- a/Popular_Movies_Stage02/app/src/main/res/layout/review_list_item.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/review_list_item.xml
@@ -10,7 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"/>
 
     <TextView
         android:id="@+id/review_content"
