--- a/Popular_Movies_Stage02/app/src/main/res/layout/trailer_list_item.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/trailer_list_item.xml
@@ -2,17 +2,21 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/video_name"
+        android:textColor="@android:color/white"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"/>
 
     <ImageView
         android:id="@+id/video_thumbnail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"/>
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:scaleType="center"/>
 
 </LinearLayout>
