--- a/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
@@ -59,6 +59,16 @@
         android:adjustViewBounds="true"
         android:alpha="0.4"/>
 
+    <!-- Floating Action Button for adding/removing to favorites SQLite database -->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/detail_fab_fav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_favorite_heart_button"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:onClick="onClickAddFavorite"/>
+
     <TextView
         android:id="@+id/tv_rating"
         android:textSize="36sp"
