--- a/Popular_Movies_Stage02/app/src/main/res/values/colors.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/values/colors.xml
@@ -49,5 +49,6 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorControlActivated">#FF4081</color>
 </resources>
