refactor: Remove unused and previously commented out code. Replace network connectivity Toast with Snackbar. Add Snackbar for add/remove Favorites. Add gold and black to colors.xml. Add and remove Strings to strings.xml. Change some UI elements from white to gold.

--- a/Popular_Movies_Stage02/app/src/main/res/values/styles.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/values/styles.xml
@@ -76,14 +76,14 @@
     <style name="DetailBlocks">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#CC000000</item>
+        <item name="android:background">@color/black_field</item>
     </style>
 
     <!-- Detail TextView Style -->
     <style name="DetailTextViews">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/gold_morning</item>
     </style>
 
 </resources>
