--- a/Popular_Movies_Stage02/app/src/main/res/drawable/border.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/drawable/border.xml
@@ -46,11 +46,11 @@
   -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Black solid background -->
-    <solid android:color="#000000" />
+    <solid android:color="@color/black_field" />
     <!-- Gold border -->
     <stroke
         android:width="1dp"
-        android:color="#ffd700" />
+        android:color="@color/gold_morning" />
     <padding
         android:bottom="1dp"
         android:left="1dp"
