--- a/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
@@ -63,9 +63,7 @@
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/detail_fab_fav"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/tv_rating"
@@ -105,8 +103,8 @@
     <View
         android:id="@+id/top_underscore"
         android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:background="#FFFFFF"
+        android:layout_height="3dp"
+        android:background="@color/gold_morning"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/tv_original_title"
         app:layout_constraintLeft_toLeftOf="@id/tv_rating"
