--- a/Popular_Movies_Stage02/app/src/main/res/values/colors.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/values/colors.xml
@@ -51,4 +51,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FFFFFF</color>
     <color name="colorControlActivated">#FF4081</color>
+    <color name="gold_morning">#FFD700</color>
+    <color name="black_field">#CC000000</color>
 </resources>
