refactor: Add to, clean up, and correct dimens.xml and UI.

--- a/Popular_Movies_Stage02/app/src/main/res/drawable/ic_favorite_red.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/drawable/ic_favorite_red.xml
@@ -1,3 +1,6 @@
+<!--Icons made by "https://www.flaticon.com/authors/freepik"-->
+<!--Title: "Favorite"-->
+<!--Licensed by Creative Commons BY 3.0-->
 <vector android:height="24dp" android:viewportHeight="495"
     android:viewportWidth="495" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#C70024" android:pathData="M362.96,14.24c-49.72,0 -92.95,27.53 -115.46,68.13v398.39C284.67,452.84 495,288.55 495,146.28C495,73.36 435.88,14.24 362.96,14.24z"/>
