--- a/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
@@ -51,21 +51,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
 
-    <android.support.design.widget.CollapsingToolbarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_scrollFlags="scroll|exitUntilCollapsed"
-        app:contentScrim="@color/gold_morning">
-
-        <ImageView
-            android:id="@+id/iv_backdrop"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alpha="0.8"
-            android:adjustViewBounds="true"
-            app:layout_constraintTop_toBottomOf="@id/rv_review_list"/>
-    </android.support.design.widget.CollapsingToolbarLayout>
-
+    <!-- Set poster as background image -->
     <ImageView
         android:id="@+id/iv_background_poster"
         android:layout_width="match_parent"
@@ -73,10 +59,17 @@
         android:adjustViewBounds="true"
         android:alpha="0.4"/>
 
+    <!-- Floating Action Button for adding/removing to favorites SQLite database -->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/detail_fab_fav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <TextView
         android:id="@+id/tv_rating"
-        android:textSize="36sp"
-        android:layout_margin="8dp"
+        android:textSize="@dimen/detail_rating_text_size"
         style="@style/DetailTextViews"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -91,9 +84,9 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:textSize="28sp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
+        android:textSize="@dimen/detail_title_text_size"
+        android:layout_marginLeft="@dimen/general_spacing"
+        android:layout_marginStart="@dimen/general_spacing"
         style="@style/DetailTextViews"
         app:layout_constraintBottom_toTopOf="@id/gl_top"
         app:layout_constraintLeft_toRightOf="@id/tv_rating"
@@ -101,9 +94,9 @@
 
     <TextView
         android:id="@+id/tv_original_title"
-        android:textSize="16sp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
+        android:textSize="@dimen/detail_original_title_text_size"
+        android:layout_marginLeft="@dimen/general_spacing"
+        android:layout_marginStart="@dimen/general_spacing"
         style="@style/DetailTextViews"
         app:layout_constraintTop_toBottomOf="@id/gl_top"
         app:layout_constraintLeft_toRightOf="@id/tv_rating"/>
@@ -111,9 +104,9 @@
     <View
         android:id="@+id/top_underscore"
         android:layout_width="wrap_content"
-        android:layout_height="3dp"
-        android:background="@color/gold_morning"
-        android:layout_marginTop="8dp"
+        android:layout_height="@dimen/detail_underscore_height"
+        android:background="@android:color/white"
+        android:layout_marginTop="@dimen/general_spacing"
         app:layout_constraintTop_toBottomOf="@id/tv_original_title"
         app:layout_constraintLeft_toLeftOf="@id/tv_rating"
         app:layout_constraintRight_toRightOf="@id/tv_original_language"/>
@@ -121,46 +114,48 @@
     <TextView
         android:id="@+id/tv_release_date"
         style="@style/DetailTextViews"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="@dimen/general_spacing_double"
+        android:layout_marginStart="@dimen/general_spacing_double"
         app:layout_constraintTop_toBottomOf="@id/top_underscore"
         app:layout_constraintLeft_toLeftOf="@id/tv_rating"/>
 
     <TextView
         android:id="@+id/tv_original_language"
         style="@style/DetailTextViews"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="@dimen/general_spacing_double"
+        android:layout_marginEnd="@dimen/general_spacing_double"
         app:layout_constraintTop_toBottomOf="@id/top_underscore"
         app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:id="@+id/tv_summary"
         style="@style/DetailTextViews"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/general_spacing"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_release_date"
-        android:background="#AA000000" />
+        android:background="@color/black_field" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_trailer_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@id/tv_summary"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_review_list"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rv_trailer_list"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="@dimen/general_spacing"/>
 
-    <!-- Floating Action Button for adding/removing to favorites SQLite database -->
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/detail_fab_fav"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <ImageView
+        android:id="@+id/iv_backdrop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:alpha="0.8"
+        android:adjustViewBounds="true"
+        app:layout_constraintTop_toBottomOf="@id/rv_review_list"/>
 </android.support.constraint.ConstraintLayout>
