--- a/Popular_Movies_Stage02/app/src/main/res/values/styles.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/values/styles.xml
@@ -66,8 +66,8 @@
     <!-- Label Style -->
     <style name="Labels">
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">@dimen/left_of_title_text_size</item>
-        <item name="android:paddingLeft">@dimen/left_of_title_padding</item>
+        <item name="android:textSize">@dimen/detail_label_text_size</item>
+        <item name="android:paddingLeft">@dimen/general_spacing</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
@@ -81,9 +81,10 @@
 
     <!-- Detail TextView Style -->
     <style name="DetailTextViews">
-        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_width">@dimen/detail_text_width</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/gold_morning</item>
+        <item name="android:layout_margin">@dimen/detail_text_margin</item>
     </style>
 
 </resources>
