fix: Add forgotten notifyDataSetChanged() in Review... ...Adapter and TrailerAdapter so that the ...RecyclerViews will show w/o rotation prompt. Change how scroll position of Review and Trailer ...RecyclerViews persist on rotation to use Lifecycle ...provided Bundles.

--- a/Popular_Movies_Stage02/app/src/main/res/values/dimens.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/values/dimens.xml
@@ -57,6 +57,8 @@
     <dimen name="detail_text_margin">8dp</dimen>
     <dimen name="detail_text_width">0dp</dimen>
     <dimen name="detail_underscore_height">1dp</dimen>
+    <dimen name="fab_margin_phone">16dp</dimen>
+    <dimen name="fab_margin_tablet">24dp</dimen>
 
     <!-- SP -->
     <dimen name="detail_label_text_size">12sp</dimen>
