--- a/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
@@ -44,119 +44,123 @@
   ~  * SOFTWARE.
   ~  */
   -->
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black">
+    android:orientation="vertical">
 
-    <!-- Set poster as background image -->
-    <ImageView
-        android:id="@+id/iv_background_poster"
+    <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:alpha="0.4"/>
+        android:layout_height="match_parent"
+        android:background="@android:color/black">
 
-    <!-- Floating Action Button for adding/removing to favorites SQLite database -->
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/detail_fab_fav"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        <ImageView
+            android:id="@+id/iv_backdrop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:alpha="0.8"
+            android:adjustViewBounds="true"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-    <TextView
-        android:id="@+id/tv_rating"
-        android:textSize="@dimen/detail_rating_text_size"
-        style="@style/DetailTextViews"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/top_underscore"/>
+        <!-- Set poster as background image -->
+        <ImageView
+            android:id="@+id/iv_background_poster"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:alpha="0.4"/>
 
-    <android.support.constraint.Guideline
-        android:id="@+id/gl_top"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.05"/>
+        <!-- Floating Action Button for adding/removing to favorites SQLite database -->
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/detail_fab_fav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:textSize="@dimen/detail_title_text_size"
-        android:layout_marginLeft="@dimen/general_spacing"
-        android:layout_marginStart="@dimen/general_spacing"
-        style="@style/DetailTextViews"
-        app:layout_constraintBottom_toTopOf="@id/gl_top"
-        app:layout_constraintLeft_toRightOf="@id/tv_rating"
-        app:layout_constraintRight_toRightOf="parent"/>
+        <TextView
+            android:id="@+id/tv_rating"
+            android:textSize="@dimen/detail_rating_text_size"
+            style="@style/DetailTextViews"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/top_underscore"/>
 
-    <TextView
-        android:id="@+id/tv_original_title"
-        android:textSize="@dimen/detail_original_title_text_size"
-        android:layout_marginLeft="@dimen/general_spacing"
-        android:layout_marginStart="@dimen/general_spacing"
-        style="@style/DetailTextViews"
-        app:layout_constraintTop_toBottomOf="@id/gl_top"
-        app:layout_constraintLeft_toRightOf="@id/tv_rating"/>
+        <android.support.constraint.Guideline
+            android:id="@+id/gl_top"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.05"/>
 
-    <View
-        android:id="@+id/top_underscore"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/detail_underscore_height"
-        android:background="@android:color/white"
-        android:layout_marginTop="@dimen/general_spacing"
-        app:layout_constraintTop_toBottomOf="@id/tv_original_title"
-        app:layout_constraintLeft_toLeftOf="@id/tv_rating"
-        app:layout_constraintRight_toRightOf="@id/tv_original_language"/>
+        <TextView
+            android:id="@+id/tv_title"
+            android:textSize="@dimen/detail_title_text_size"
+            android:layout_marginLeft="@dimen/general_spacing"
+            android:layout_marginStart="@dimen/general_spacing"
+            style="@style/DetailTextViews"
+            app:layout_constraintBottom_toTopOf="@id/gl_top"
+            app:layout_constraintLeft_toRightOf="@id/tv_rating"
+            app:layout_constraintRight_toRightOf="parent"/>
 
-    <TextView
-        android:id="@+id/tv_release_date"
-        style="@style/DetailTextViews"
-        android:layout_marginLeft="@dimen/general_spacing_double"
-        android:layout_marginStart="@dimen/general_spacing_double"
-        app:layout_constraintTop_toBottomOf="@id/top_underscore"
-        app:layout_constraintLeft_toLeftOf="@id/tv_rating"/>
+        <TextView
+            android:id="@+id/tv_original_title"
+            android:textSize="@dimen/detail_original_title_text_size"
+            android:layout_marginLeft="@dimen/general_spacing"
+            android:layout_marginStart="@dimen/general_spacing"
+            style="@style/DetailTextViews"
+            app:layout_constraintTop_toBottomOf="@id/gl_top"
+            app:layout_constraintLeft_toRightOf="@id/tv_rating"/>
 
-    <TextView
-        android:id="@+id/tv_original_language"
-        style="@style/DetailTextViews"
-        android:layout_marginRight="@dimen/general_spacing_double"
-        android:layout_marginEnd="@dimen/general_spacing_double"
-        app:layout_constraintTop_toBottomOf="@id/top_underscore"
-        app:layout_constraintRight_toRightOf="parent"/>
+        <View
+            android:id="@+id/top_underscore"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/detail_underscore_height"
+            android:background="@android:color/white"
+            android:layout_marginTop="@dimen/general_spacing"
+            app:layout_constraintTop_toBottomOf="@id/tv_original_title"
+            app:layout_constraintLeft_toLeftOf="@id/tv_rating"
+            app:layout_constraintRight_toRightOf="@id/tv_original_language"/>
 
-    <TextView
-        android:id="@+id/tv_summary"
-        style="@style/DetailTextViews"
-        android:layout_margin="@dimen/general_spacing"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_release_date"
-        android:background="@color/black_field" />
+        <TextView
+            android:id="@+id/tv_release_date"
+            style="@style/DetailTextViews"
+            android:layout_marginLeft="@dimen/general_spacing_double"
+            android:layout_marginStart="@dimen/general_spacing_double"
+            app:layout_constraintTop_toBottomOf="@id/top_underscore"
+            app:layout_constraintLeft_toLeftOf="@id/tv_rating"/>
+
+        <TextView
+            android:id="@+id/tv_original_language"
+            style="@style/DetailTextViews"
+            android:layout_marginRight="@dimen/general_spacing_double"
+            android:layout_marginEnd="@dimen/general_spacing_double"
+            app:layout_constraintTop_toBottomOf="@id/top_underscore"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_summary"
+            style="@style/DetailTextViews"
+            android:layout_margin="@dimen/general_spacing"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_release_date"
+            android:background="@color/black_field" />
+    </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_trailer_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_summary"/>
+        android:layout_height="match_parent"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_review_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rv_trailer_list"
         android:layout_marginTop="@dimen/general_spacing"/>
-
-    <ImageView
-        android:id="@+id/iv_backdrop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:alpha="0.8"
-        android:adjustViewBounds="true"
-        app:layout_constraintTop_toBottomOf="@id/rv_review_list"/>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
